--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -12,6 +12,7 @@ set_real_ip_from 103.251.167.20;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
+set_real_ip_from 104.168.144.253;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -129,6 +130,7 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.147.97.190;
 set_real_ip_from 141.164.38.67;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.12.88;
@@ -213,6 +215,7 @@ set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.138.250;
 set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.149.199;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
@@ -242,7 +245,6 @@ set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
-set_real_ip_from 179.55.88.110;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 184.75.223.235;
 set_real_ip_from 185.100.85.132;
@@ -832,6 +834,7 @@ set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.40.68;
 set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.46.203;
+set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.54.218;
@@ -1027,6 +1030,7 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:5501:3000:1dc::2;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
@@ -1160,6 +1164,7 @@ set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
+set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:64c0:11:0:be24:11ff:fe12:2ad2;
@@ -1667,7 +1672,6 @@ set_real_ip_from 88.80.26.4;
 set_real_ip_from 89.147.108.63;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
-set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.221.215.139;
