--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,7 +12,6 @@ allow 103.251.167.20;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
-allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -150,6 +149,7 @@ allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
+allow 150.241.67.214;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
@@ -223,7 +223,6 @@ allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
-allow 178.175.134.93;
 allow 178.175.148.209;
 allow 178.175.148.246;
 allow 178.20.55.16;
@@ -1030,7 +1029,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -1359,6 +1357,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1487,6 +1486,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1567,6 +1567,7 @@ allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
+allow 46.250.242.141;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 5.104.86.6;
