--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,6 +99,9 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
+allow 109.199.101.106;
+allow 109.199.101.134;
+allow 109.199.105.142;
 allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -246,7 +249,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 184.75.223.235;
+allow 184.75.223.227;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -304,7 +307,6 @@ allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.236.55;
 allow 185.195.71.244;
-allow 185.196.10.184;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.220.100.240;
@@ -669,7 +671,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.235;
+allow 198.167.206.138;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1071,6 +1073,9 @@ allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
 allow 2a02:c206:2240:3516::1;
+allow 2a02:c206:2240:5051::1;
+allow 2a02:c206:2240:5054::1;
+allow 2a02:c206:2240:5264::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1359,6 +1364,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1487,6 +1493,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1544,6 +1551,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1704,7 +1712,6 @@ allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.125;
 allow 93.95.228.205;
-allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
