--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -267,6 +267,9 @@ deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
 deny 2a02:c204:2220:8710::1;
 deny 2a02:c206:2240:3516::1;
+deny 2a02:c206:2240:5051::1;
+deny 2a02:c206:2240:5054::1;
+deny 2a02:c206:2240:5264::1;
 deny 2a02:c207:3002:8283::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
@@ -555,6 +558,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
