--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -104,6 +104,7 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -570,6 +571,7 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:7c40:3000:911::2;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
