--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -120,6 +120,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
@@ -814,6 +815,7 @@ set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:3514::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -1386,6 +1388,7 @@ set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:7c40:3000:911::2;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1513,6 +1516,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
