--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,6 +13,7 @@ allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
+allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -566,7 +567,6 @@ allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
-allow 192.108.48.150;
 allow 192.119.110.151;
 allow 192.210.160.31;
 allow 192.210.214.10;
@@ -733,7 +733,6 @@ allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
-allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -883,7 +882,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1045,6 +1043,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -1388,7 +1387,7 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:7c40:3000:911::2;
-allow 2a0d:8140:1fff:4a9a::1;
+allow 2a0d:8140:1fff:3f23::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1516,7 +1515,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1676,6 +1674,7 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 82.153.138.17;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
