--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -159,6 +159,7 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 156.229.232.101;
+allow 156.229.232.104;
 allow 156.229.232.108;
 allow 156.229.232.115;
 allow 156.229.232.54;
@@ -529,6 +530,7 @@ allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
+allow 185.247.226.175;
 allow 185.252.232.218;
 allow 185.34.33.2;
 allow 185.35.202.222;
@@ -647,7 +649,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
-allow 193.41.226.117;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -699,7 +700,6 @@ allow 198.98.57.74;
 allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.195.249.214;
-allow 199.195.250.165;
 allow 199.195.251.119;
 allow 199.195.251.78;
 allow 199.195.253.124;
@@ -940,7 +940,6 @@ allow 209.141.37.94;
 allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -1003,7 +1002,6 @@ allow 23.191.200.3;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
-allow 23.236.122.193;
 allow 23.94.211.25;
 allow 23.94.36.167;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1059,7 +1057,6 @@ allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
 allow 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
-allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:20:117a:2605:6400:20:117a;
 allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:2417::69;
@@ -1337,6 +1334,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
@@ -1568,6 +1566,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1596,6 +1595,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
+allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:7803:fac5:5bda::1;
@@ -1697,6 +1697,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1770,6 +1771,7 @@ allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.84.107.97;
 allow 45.9.148.50;
+allow 45.9.168.108;
 allow 45.94.31.68;
 allow 45.95.169.100;
 allow 45.95.169.130;
@@ -1824,6 +1826,7 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1938,7 +1941,6 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
