--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -153,7 +153,6 @@ set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
-set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 set_real_ip_from 2605:6400:20:117a:2605:6400:20:117a;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:2417::69;
@@ -430,6 +429,7 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
+set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
@@ -661,6 +661,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -689,6 +690,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:5::2;
+set_real_ip_from 2a0e:bfc0:0:8::a84e;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:7803:fac5:5bda::1;
